fixed side scrollbar issue

--- a/src/sass/_section.scss
+++ b/src/sass/_section.scss
@@ -29,7 +29,7 @@
 section {
     background-color: #fcf9f9;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
 
     .content {
